--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -13,3 +13,9 @@
 #   email: john@doe.net
 #   password: apassword
 #   # api_key: <your api key here>
+
+production:
+  host: localhost:3000
+  handle: pleasant-darkness-6264
+  email: cedric.lor@gmail.com
+  api_key: 972f6be1945ebb3bbded02d7b96b3764503d7521
