--- a/config/site.yml
+++ b/config/site.yml
@@ -23,16 +23,11 @@ timezone: Paris
 # And include <meta type="keywords"> and <meta type="description">
 # For this purpose you can set values for these variables here
 # They can be accessed in templates through the site.seo_title, site.meta_keywords, and site.meta_description variables
-seo_title:
-  en: "Centre for the Franco-Russian and Franco-Chinese friendships"
-  fr: "Centre pour l'amitié franco-russe et franco-chinoise"
-  ru: "Центр Франко-русский и франко-китайские дружеские"
-  zh-CN: "中心法俄和法 - 中国友谊"
+seo_title: "Centre for the Franco-Russian and Franco-Chinese friendships"
 meta_keywords:
   en: "Franco-Russian friendship, Franco-Chinese friendship"
   fr: "Amitié franco-russe, amitié franco-chinoise"
-meta_description:
-  en: "Website of the Franco-Russian and Franco-Chinese friendships"
-  fr: "Site internet de l'amiété franco-russe et franco-chinoise"
-  ru: "Центр веб-сайт для дружбы Франко - русской и Франко - китайский"
-  zh-CN: "中心网站为法俄友谊和法国 - 中国"
+meta_description: "Website of the Franco-Russian and Franco-Chinese friendships"
+  # fr: "Site internet de l'amiété franco-russe et franco-chinoise"
+  # ru: "Центр веб-сайт для дружбы Франко - русской и Франко - китайский"
+  # zh-CN: "中心网站为法俄友谊和法国 - 中国"
