--- a/config/site.yml
+++ b/config/site.yml
@@ -24,6 +24,9 @@ timezone: Paris
 # For this purpose you can set values for these variables here
 # They can be accessed in templates through the site.seo_title, site.meta_keywords, and site.meta_description variables
 seo_title: "Centre for the Franco-Russian and Franco-Chinese friendships"
+  # fr: "Centre pour l'amitié franco-russe et franco-chinoise"
+  # ru: "Центр Франко-русский и франко-китайские дружеские"
+  # zh-CN: "中心法俄和法 - 中国友谊"
 meta_keywords:
   en: "Franco-Russian friendship, Franco-Chinese friendship"
   fr: "Amitié franco-russe, amitié franco-chinoise"
