--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -14,8 +14,9 @@
 #   password: apassword
 #   # api_key: <your api key here>
 
-production:
-  host: localhost:3000
-  handle: pleasant-darkness-6264
-  email: cedric.lor@gmail.com
-  api_key: 972f6be1945ebb3bbded02d7b96b3764503d7521
+# production:
+#   host: localhost:3000
+#   handle: pleasant-darkness-6264
+#   email: cedric.lor@gmail.com
+#   api_key: 972f6be1945ebb3bbded02d7b96b3764503d7521
+
