added event content type and events index page; still need to create an event read page as well as refactor the news read page

--- a/app/content_types/news.yml
+++ b/app/content_types/news.yml
@@ -20,7 +20,7 @@ fields:
     label: Posted at # Human readable name of the field
     type: date_time
     required: true
-    localized: false
+    localized: true
 
 - tags: # The lowercase, underscored name of the field
     label: Tags # Human readable name of the field
@@ -57,5 +57,15 @@ fields:
     required: false
     localized: false
     class_name: photos # Define the slug of the target content type (eg. comments)
+    inverse_of: news  # Define the name of the field referring to news in the target content type
+    ui_enabled: true # If you want to manage the entries of the relationship directly from the source entry
+
+- events:
+    label: Events
+    hint: A news post may relate to many events and vice versa
+    type: has_many
+    required: false
+    localized: true
+    class_name: events # Define the slug of the target content type (eg. comments)
     inverse_of: news  # Define the name of the field referring to news in the target content type
     ui_enabled: true # If you want to manage the entries of the relationship directly from the source entry
