--- a/app/content_types/photos.yml
+++ b/app/content_types/photos.yml
@@ -55,3 +55,16 @@ fields:
     required: false
     localized: false
     class_name: news
+
+- events: # The lowercase, underscored name of the field
+    label: Events # Human readable name of the field
+    type: belongs_to
+    required: false
+    localized: false
+    class_name: events
+
+- event:
+    label: Event
+    hint: A description of the relationship for the editors
+    type: belongs_to
+    class_name: events
