even more broken -- no implicit conversion of nil into Hash with error in /Users/cedriclor/.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/locomotivecms_steam-1.0.0.rc8/lib/locomotive/steam/adapters/filesystem/yaml_loaders/content_entry.rb

--- a/app/content_types/news.yml
+++ b/app/content_types/news.yml
@@ -65,7 +65,7 @@ fields:
     hint: A news post may relate to many events and vice versa
     type: has_many
     required: false
-    localized: true
+    localized: false
     class_name: events # Define the slug of the target content type (eg. comments)
     inverse_of: news  # Define the name of the field referring to news in the target content type
     ui_enabled: true # If you want to manage the entries of the relationship directly from the source entry
