re-working fine except relationship does not seem to be made

--- a/app/content_types/news.yml
+++ b/app/content_types/news.yml
@@ -51,6 +51,12 @@ fields:
     localized: true
     text_formatting: html # html (uses rich text editor), markdown or text (uses plain text editor)
 
+- site_member:
+    label: Author
+    hint: Full name of the author of the article
+    type: belongs_to
+    class_name: site_members
+
 - photos:
     label: Photos
     type: has_many
