--- a/data/site_members.yml
+++ b/data/site_members.yml
@@ -1,16 +1,15 @@
-- "Sample 1":
+- "Patrick Sommer":
     bio: "Animi voluptas soluta ipsum nesciunt quia earum nulla. Animi accusantium et modi optio expedita cumque incidunt. Adipisci distinctio temporibus animi."
-    category: Contributor # Use the value of a select option defined in the app/content_types/Site members.rb file.
+    group: "Contributor" # Use the value of a select option defined in the app/content_types/Site members.rb file.
 
-- "Sample 2":
+- "Alphonse Artois":
     bio: "At in corrupti explicabo. Modi eligendi harum. Sit aut necessitatibus. Autem odit laboriosam beatae sequi quibusdam."
-    category: Contributor # Use the value of a select option defined in the app/content_types/Site members.rb file.
+    group: "Contributor" # Use the value of a select option defined in the app/content_types/Site members.rb file.
 
-- "Sample 3":
+- "Benjamin Ben Chedrid":
     bio: "Et accusantium et eligendi rerum dolorem quia est. Molestiae vel sint vero ea vitae. Qui eum qui natus."
-    category: Board Member # Use the value of a select option defined in the app/content_types/Site members.rb file.
+    group: "Board Member" # Use the value of a select option defined in the app/content_types/Site members.rb file.
 
-- "Sample 4":
+- "Cédric Caporal":
     bio: "Qui incidunt nihil deserunt commodi illum omnis. Vel laborum iusto alias repellat. Et quia aliquid at."
-    category: Executive # Use the value of a select option defined in the app/content_types/Site members.rb file.
-
+    group: "Executive" # Use the value of a select option defined in the app/content_types/Site members.rb file.
