numerous modification; solved scoping issues; dealt with images issues (issue still unresolved); dealt with editable elements issues (still unresolved, pending @did's fixes)

--- a/app/content_types/events.yml
+++ b/app/content_types/events.yml
@@ -49,7 +49,9 @@ fields:
     select_options:
       en: ["Dance", "Theater", "Poetry", "Performance"]
       fr: ["Danse", "Théatre", "Poésie", "Performance"]
-    required: true
+      ru: ["танец", "Театр", "поэзия", "Представление"]
+      zh_CN: ["舞蹈", "剧院", "诗", "性能"]
+    required: false
     localized: true
 
 - main_star: # The lowercase, underscored name of the field
@@ -106,7 +108,7 @@ fields:
 - featured_image: # The lowercase, underscored name of the field
     label: Featured image # Human readable name of the field
     type: file
-    required: true
+    required: false
     hint: The main image for the event
     localized: false
 
