--- a/config/site.yml
+++ b/config/site.yml
@@ -23,14 +23,21 @@ timezone: Paris
 # And include <meta type="keywords"> and <meta type="description">
 # For this purpose you can set values for these variables here
 # They can be accessed in templates through the site.seo_title, site.meta_keywords, and site.meta_description variables
-seo_title: "Art des Nations"
-  # fr: "Centre pour l'amitié franco-russe et franco-chinoise"
-  # ru: "Центр Франко-русский и франко-китайские дружеские"
-  # zh-CN: "中心法俄和法 - 中国友谊"
+seo_title:
+  en: "Art of the Nations"
+  fr: "Art des Nations"
+  ru: "Искусство народов"
+  zh-CN: "艺术国"
 meta_keywords:
-  en: "Franco-Russian friendship, Franco-Chinese friendship"
-  fr: "Amitié franco-russe, amitié franco-chinoise"
-meta_description: "Website of Art des Nations"
+  en: "Franco-Russian friendship, Franco-Chinese friendship, Franco-Russian cultural exchanges, Franco-Russian artistic exchanges, Franco-Chinese cultural exchanges, Franco-Chinese artistic exchanges"
+  fr: "Amitié franco-russe, amitié franco-chinoise, échanges culturels franco-russe, échanges artistiques france-russe, échanges culturels franco-chinois, échanges artistiques franco-chinois"
+  ru: "Франко - русской дружбы , франко- китайской дружбы , франко- российские культурные обмены , франко- российские художественные обмены, франко- китайских культурных обменов, франко- китайские художественные обмены"
+  zh-CN: "法俄友谊，法国和中国的友谊，法俄文化交流，法俄艺术交流，法国和中国的文化交流，法国和中国艺术交流"
+meta_description:
+  en: "Website of Art des Nations"
+  fr: "Site internet d'Art des Nations"
+  ru: "Сайт искусство Наций"
+  zh-CN: "网站上的国家的艺术"
   # fr: "Site internet de l'amiété franco-russe et franco-chinoise"
   # ru: "Центр веб-сайт для дружбы Франко - русской и Франко - китайский"
   # zh-CN: "中心网站为法俄友谊和法国 - 中国"
